--- a/data/news.txt
+++ b/data/news.txt
@@ -7,11 +7,15 @@ news "UI programmer"
 			"UI designer"
 	message
 		word
+			`"`
+		word
 			"I've made a progress bar that's actually accurate while moving at a constant speed. "
 			"I made an input method that allows you to type 60 characters per second. "
 			"I made a file manager where files float around in space. "
 		word
 			"It works really well, but people think it's too complicated."
+		word
+			`"`
 
 news "Human Hai linguist"
 	location
@@ -21,10 +25,14 @@ news "Human Hai linguist"
 			"Human Linguist"
 	message
 		word
+			`"`
+		word
 			"The Hai language doesn't use articles. It's easier than English. I always wondered why we say 'the' before ship names but not before people's names."
 			"Most Hai learn English in school so that they can communicate with human merchants."
 			"I heard the Unfettered pronounce the vowel in Root with the mouth less open than the friendly Hai. I think the Unfettered pronunciation of that vowel might be the original one."
 			"Despite the different mouths, humans and Hai can learn to speak each other's languages. I've always found that fascinating."
+		word
+			`"`
 
 news "Human or Hai translator 1"
 	location
@@ -35,12 +43,16 @@ news "Human or Hai translator 1"
 			"Hai translator"
 	message
 		word
+			`"`
+		word
 			"Translating "
 		word
 			"Hai poetry "
 			"Hai song lyrics "
 		word
 			"into English is challenging, but I like that challenge."
+		word
+			`"`
 
 news "Human or Hai translator 2"
 	location
@@ -51,7 +63,7 @@ news "Human or Hai translator 2"
 			"Hai translator"
 	message
 		word
-			"I translated some human songs into the Hai language, and the Hai really like them. I did chose some songs that they liked listening to in English already though."
+			`"I translated some human songs into the Hai language, and the Hai really like them. I did chose some songs that they liked listening to in English already though."`
 
 news "Human or Hai font maker"
 	location
@@ -60,6 +72,8 @@ news "Human or Hai font maker"
 		word
 			"Typeface designer"
 	message
+		word
+			`"`
 		word
 			"I design fonts "
 			"I create fonts "
@@ -75,10 +89,12 @@ news "Human or Hai font maker"
 				
 		word
 			"It's nice when bilingual advertisements look consistent."
-			"It doesn't work well with software from human space."
+			"It doesn't work well with software from human space though."
 			"It's nice when bilingual signs look consistent."
 			"They even handle the different types of musical notation."
 			"Some of them are well known throughout Hai space."
+		word
+			`"`
 
 news "Hai skateboarder"
 	location
@@ -88,7 +104,7 @@ news "Hai skateboarder"
 			"Skateboarder"
 	message
 		word
-			"Do you want to see my human-inspired dance?"
+			`"Do you want to see my human-inspired dance?"`
 
 news "Human tourist in Hai space"
 	location
@@ -98,7 +114,7 @@ news "Human tourist in Hai space"
 			"Human tourist"
 	message
 		word
-			"I wonder why they measure time in Earth days up here. I wonder if it's because of the time a hyperspace jump takes or it's some way to make it easier to communicate with us."
+			`"I wonder why they measure time in Earth days up here. I wonder if it's because of the time a hyperspace jump takes or it's some way to make it easier to communicate with us."`
 
 news "Coalition advertisement"
 	location
@@ -109,6 +125,8 @@ news "Coalition advertisement"
 			"Advertisement"
 	message
 		word
+			`"`
+		word
 			"Cold Horizon"
 			"Gentle Rain"
 			"Warm Wind"
@@ -116,6 +134,8 @@ news "Coalition advertisement"
 			" with Chubby Cloud you can travel to. "
 		word
 			"Anyone in our ships fit will. Arach, Saryd, human, Kimek or alien, universal bunks we have!"
+		word
+			`"`
 
 news "Wanderer race"
 	location
@@ -126,5 +146,4 @@ news "Wanderer race"
 			"Wanderers"
 	message
 		word
-			"You see a group of wanderers take off, fly in a big circle, land, then hug each other. It seems it was some sort of race."
-
+			`"You see a group of wanderers take off, fly in a big circle, land, then hug each other. It seems it was some sort of race."`
